# cab-booking

./: CMakeCache.txt  CMakeLists.txt  Makefile  cab_booking_system  cmake_install.cmake  folderStructure.txt  main.cpp
controllers/: CabsController.h  RidersController.h
database/: CabsManager.h  RidersManager.h  TripsManager.h
model/: Cab.h  Location.h  Rider.h  Trip.h
strategies/: CabMatchingStrategy.h  DefaultCabMatchingStrategy.h  DefaultPricingStrategy.h  PricingStrategy.h
